--- a/package.json
+++ b/package.json
@@ -17,19 +17,21 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
-    "@types/react": "17.0.18",
+    "@types/node": "^16.6.1",
+    "@types/react": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
-    "babel-jest": "^25.1.0",
+    "babel-jest": "^27.0.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.1.0",
+    "jest": "^27.0.6",
     "prettier": "2.3.2",
     "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.5",
     "typescript": "4.3.5"
   }
 }
